Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-20288

LASSERT fails in ksocknal_close_conn_locked with IPv6

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      In ksocknal_close_conn_locked, we have:

      LASSERT(conn->ksnc_proto == &ksocknal_protocol_v3x);

      But when we have IPv6, ksnc_proto is ksocknal_protocol_v4x, so assert fails.

            cbordage Cyril Bordage
            cbordage Cyril Bordage
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: