LU-20288 ksocklnd: fix assert when closing conn

When we have IPv6, ksnc_proto is not ksocknal_protocol_v3x but
ksocknal_protocol_v4x. This fix solves:
ASSERTION( conn->ksnc_proto == &ksocknal_protocol_v3x ) failed in
ksocknal_close_conn_locked.

Signed-off-by: Cyril Bordage <cbordage@whamcloud.com>
Test-Parameters: trivial testlist=sanity-lnet env=FORCE_LARGE_NID=true,LOAD_MODULES_REMOTE=true
Change-Id: Ice091d0ee8fc65754c789679cf89757e6eccccab
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/66041
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Chris Horn <chorn@ddn.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Xinxia Qu <xqu@ddn.com>
Reviewed-by: Manish Regmi <mregmi@ddn.com>
Tested-by: Maloo <maloo@whamcloud.com>